--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "server-only": "^0.0.1",
+    "speakeasy": "^2.0.0",
     "tailwind-merge": "^3.3.1",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
+    "@types/speakeasy": "^2.0.10",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16"
